--- a/Task13/Resources/layout/activity_main.xml
+++ b/Task13/Resources/layout/activity_main.xml
@@ -1,7 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</RelativeLayout>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:text="Text View"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:id="@+id/txt"/>
+    <EditText
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:text="Edit Text"
+        android:gravity="center"
+        android:inputType="text"
+        android:id="@+id/editTxt"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:orientation="vertical"
+        android:id="@+id/centerLayout"/>
+
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="do some changes"
+        android:id="@+id/changesBtn"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:text="next"
+            android:id="@+id/nextBtn"/>
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:text="exit"
+            android:id="exitBtn"/>
+    </LinearLayout>
+</LinearLayout>
