--- a/Task13/Resources/layout/board.xml
+++ b/Task13/Resources/layout/board.xml
@@ -35,19 +35,25 @@
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:layout_marginRight="10dp"
-            android:text="add"/>
+            android:text="add"
+            android:id="@+id/addBtn"/>
         <Button
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
-            android:text="clear"/>
+            android:text="clear"
+            android:id="@+id/clearBtn"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:orientation="horizontal"/>
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@android:color/holo_purple"
+        android:id="@id/centerLayout"/>
     <Button
         android:layout_width="150dp"
         android:layout_height="60dp"
-        android:text="go back"/>
+        android:text="go back"
+        android:id="@+id/goBackBtn"/>
 </LinearLayout>
