added cards.xml and finished events for it

--- a/Task13/Resources/layout/activity_main.xml
+++ b/Task13/Resources/layout/activity_main.xml
@@ -39,18 +39,25 @@
         android:layout_height="60dp"
         android:orientation="horizontal">
         <Button
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
             android:text="next"
             android:id="@+id/nextBtn"/>
         <Button
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
             android:text="exit"
             android:id="@+id/exitBtn"/>
+          <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:text="images"
+            android:id="@+id/imagesScreen"/>
     </LinearLayout>
 </LinearLayout>
