--- a/Task13/Resources/layout/cards.xml
+++ b/Task13/Resources/layout/cards.xml
@@ -53,10 +53,13 @@
 
     </LinearLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/mainLayout"/>
-
+    </ScrollView>
 </LinearLayout>
